--- a/source/views/template-sprite.jade
+++ b/source/views/template-sprite.jade
@@ -23,7 +23,10 @@ block container
   h2 Custom Select
   div
     +select(['Nguyen Van A', 'Nguyen Van B', 'Nguyen Van C', 'Nguyen Van D', 'Nguyen Van E', 'Nguyen Van F'], 1)#sel-fullname(name="sel-fullname", data-hl-select="true")
-  h2 Form Elements
-  h2 Corner
-  h2 Background
-  h2 General
+  br
+  br
+  br
+  h2 Custom Select Group
+  div
+    +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van B']}, {label: 'Job', groupDetails: ['HTMl', 'Javascript'], selected: 1}])#sel-job(name="sel-job", data-hl-select="true")
+
