--- a/source/views/template-sprite.jade
+++ b/source/views/template-sprite.jade
@@ -30,5 +30,5 @@ block container
   div
     +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van B']}, {label: 'Job', groupDetails: ['HTMl', 'Javascript'], selected: 1}])#sel-job(name="sel-job", data-hl-select="true")
   div
-    +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van C']}, {label: 'Job', groupDetails: ['HTMl', 'Javascript'], selected: 1}])#sel-jobi(name="sel-jobi", data-hl-select="true")
+    +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van C']}, {label: 'Job', groupDetails: ['HTMl', 'Javascript']}])#sel-jobi(name="sel-jobi", data-hl-select="true")
 
