--- a/source/views/template-sprite.jade
+++ b/source/views/template-sprite.jade
@@ -22,13 +22,13 @@ block container
       +custom-input({id: 'custom-rd-2', label: 'Youtube', type: 'radio', name: 'like-rd'}, {'data-custom-input': 'true', 'class': 'radio-group'}).radio-1
   h2 Custom Select
   div
-    +select(['Nguyen Van A', 'Nguyen Van B', 'Nguyen Van C', 'Nguyen Van D', 'Nguyen Van E', 'Nguyen Van F'], 1)#sel-fullname(name="sel-fullname", data-hl-select="true")
+    +select(['Nguyen Van A', 'Nguyen Van B', 'Nguyen Van C', 'Nguyen Van D', 'Nguyen Van E', 'Nguyen Van F'], 1)#sel-fullname(name="sel-fullname", data-customselect="true")
   br
   br
   br
   h2 Custom Select Group
   div
-    +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van B']}, {label: 'Job', groupDetails: ['HTMl', 'Javascript'], selected: 1}])#sel-job(name="sel-job", data-hl-select="true")
+    +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van B']}, {label: 'Job', groupDetails: ['HTMl', 'Javascript'], selected: 1}])#sel-job(name="sel-job", data-customselect="true")
   div
-    +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van C']}, {label: 'Job', groupDetails: ['HTMl', 'Javascript']}])#sel-jobi(name="sel-jobi", data-hl-select="true")
+    +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van C']}, {label: 'Job', groupDetails: ['HTMl', 'Javascript']}])#sel-jobi(name="sel-jobi", data-customselect="true")
 
