--- a/source/assets/css/plugin.less
+++ b/source/assets/css/plugin.less
@@ -1,5 +1,5 @@
 // Plugin
-.hl-select {
+.sel-custom {
   cursor: pointer;
   margin: 0 auto;
   width: 250px;
@@ -40,13 +40,10 @@
     .reset-appearance();
   }
 }
-.hl-hidden {
+.sel-hidden {
   display: none;
 }
-.hl-show {
-  display: block;
-}
-.hl-sel-dropdown {
+.sel-dropdown {
   box-shadow: 0px 0px 5px rgba(0,0,0, 0.3);
   position: absolute;
   z-index: 9999;
@@ -54,7 +51,7 @@
   .border-radius(6px);
   box-sizing: border-box;
   background-color: #fff;
-  > li, .hl-sel-dropdown-inner > li {
+  > li, .sel-dropdown-inner > li {
     padding: 5px;
     outline: 1px solid #fff;
     &:hover, &.active {
@@ -63,7 +60,7 @@
       color: #fff;
       cursor: pointer;
     }
-    &.hl-optgroup {
+    &.sel-optgroup {
       padding: 0;
       outline: none;
       &:hover, &.active {
