--- a/source/assets/css/plugin.less
+++ b/source/assets/css/plugin.less
@@ -51,7 +51,7 @@
   .border-radius(6px);
   box-sizing: border-box;
   background-color: #fff;
-  > li, .sel-dropdown-inner > li {
+  > li, .sel-list > li {
     padding: 5px;
     outline: 1px solid #fff;
     &:hover, &.active {
@@ -60,7 +60,7 @@
       color: #fff;
       cursor: pointer;
     }
-    &.sel-optgroup {
+    &.sel-group {
       padding: 0;
       outline: none;
       &:hover, &.active {
