--- a/source/views/template-sprite.jade
+++ b/source/views/template-sprite.jade
@@ -28,7 +28,7 @@ block container
   br
   h2 Custom Select Group
   div
-    +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van B']}, {label: 'Job', groupDetails: ['HTMl', 'Javascript'], selected: 1}])#sel-job(name="sel-job", data-customselect="true")
+    +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van B']}, {label: 'Job', groupDetails: ['HTML', 'Javascript'], selected: 1}])#sel-job(name="sel-job", data-customselect="true")
   div
-    +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van C']}, {label: 'Job', groupDetails: ['HTMl', 'Javascript']}])#sel-jobi(name="sel-jobi", data-customselect="true")
+    +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van C']}, {label: 'Job', groupDetails: ['HTML', 'Javascript']}])#sel-jobi(name="sel-jobi", data-customselect="true")
 
