--- a/source/assets/css/plugin.less
+++ b/source/assets/css/plugin.less
@@ -61,18 +61,18 @@
       cursor: pointer;
     }
     &.sel-group {
-      padding: 0;
       outline: none;
       &:hover, &.active {
         background-color: transparent;
         .border-radius(6px);
-        color: #525252;
+        color: #000000;
         cursor: default;
       }
       strong {
         display: block;
         padding: 5px 3px;
       }
+      .sel-list {margin-left: 5px;}
     }
   }
 }
