--- a/source/views/template-sprite.jade
+++ b/source/views/template-sprite.jade
@@ -21,14 +21,11 @@ block container
       +custom-input({id: 'custom-rd-1', label: 'Twitter', type: 'radio', name: 'like-rd'}, {'data-custom-input': 'true', 'class': 'radio-group'}).radio-1
       +custom-input({id: 'custom-rd-2', label: 'Youtube', type: 'radio', name: 'like-rd'}, {'data-custom-input': 'true', 'class': 'radio-group'}).radio-1
   h2 Custom Select
-  div
+  .demo-1
     +select(['Nguyen Van A', 'Nguyen Van B', 'Nguyen Van C', 'Nguyen Van D', 'Nguyen Van E', 'Nguyen Van F'], 1)#sel-fullname(name="sel-fullname", data-customselect="true")
-  br
-  br
-  br
   h2 Custom Select Group
-  div
+  .demo-1
     +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van B']}, {label: 'Job', groupDetails: ['HTML', 'Javascript'], selected: 1}])#sel-job(name="sel-job", data-customselect="true")
-  div
-    +select([{label: 'Name', groupDetails: ['Nguyen Van A', 'Nguyen Van C']}, {label: 'Job', groupDetails: ['HTML', 'Javascript']}])#sel-jobi(name="sel-jobi", data-customselect="true")
+  .demo-1
+    +select([{label: 'Name', groupDetails: ['Nguyen Van D', 'Nguyen Van R']}, {label: 'Job', groupDetails: ['MOBILE', 'ANDROID']}])#sel-jobi(name="sel-jobi", data-customselect="true")
 
