--- a/source/assets/css/block.less
+++ b/source/assets/css/block.less
@@ -1,3 +1,7 @@
 .demo-1 {
-	margin: 100px 0;
+  margin-top: 150px;
+  .sel-custom {
+    float: left;
+    & + .sel-custom {margin-left: 50px;}
+  }
 }
