--- a/source/views/layouts/template.jade
+++ b/source/views/layouts/template.jade
@@ -19,7 +19,7 @@ html(class="no-js", lang="en")
     //- link(rel="stylesheet", href="css/print.css", media="print")
     style.
       #template {margin: 20px; background: #eee;}
-      h2 {margin: 20px 0; border-bottom: 1px solid #ccc; font-weight: normal;}
+      h2 {margin: 20px 0; padding: 10px 0; border-bottom: 1px solid #ccc; font-weight: normal; font-size: 40px;}
       .group-1 {overflow: hidden;}
     script(src="js/modernizr.js")
   body#template
