--- a/source/assets/css/responsive.less
+++ b/source/assets/css/responsive.less
@@ -1,5 +1,15 @@
 // Responsive
 @media only screen and (max-width: 1024px) {
+	.demo-1 {
+	  .sel-custom {
+	  	width: 100%;
+	    float: none;
+	    & + .sel-custom {
+	    	margin-left: 0;
+	    	margin-top: 80px;
+	    }
+	  }
+	}
 }
 @media only screen and (max-width: 800px) {
 }
