--- a/source/views/sitemap.jade
+++ b/source/views/sitemap.jade
@@ -21,38 +21,8 @@ block container
     class: 'template',
     no: '-',
     psd: 'Sprite',
-    link: 'template-sprite.html',
+    link: 'customselect.html',
     status: 'Building structure',
-    complete: '0%',
-    startDate: 'dd/mm/yyyy',
-    endDate: 'dd/mm/yyyy',
-    checklist: 'N',
-    unitTest: 'N',
-    codeReview: 'N',
-    developer: 'Developer name',
-    checkedBy: 'Leader name'
-  })
-  +rowContent({
-    class: 'template',
-    no: '-',
-    psd: 'Style Guide',
-    link: 'template-style-guide.html',
-    status: 'Building structure',
-    complete: '0%',
-    startDate: 'dd/mm/yyyy',
-    endDate: 'dd/mm/yyyy',
-    checklist: 'N',
-    unitTest: 'N',
-    codeReview: 'N',
-    developer: 'Developer name',
-    checkedBy: 'Leader name'
-  })
-  +rowContent({
-    class: 'template',
-    no: 1,
-    psd: 'Homepage.psd',
-    link: 'index.html',
-    status: 'Cutting template',
     complete: '0%',
     startDate: 'dd/mm/yyyy',
     endDate: 'dd/mm/yyyy',
